--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,19 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - LOGS_DIR=/app/logs
     depends_on:
       - db
     volumes:
       - .:/app
     env_file:
       - .env
-      
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        
   db:
     image: postgres:16-alpine
     environment:
@@ -26,6 +32,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
     env_file:
       - .env
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
       
 volumes:
   postgres_data:
