update end and readme

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-POSTGRES_DB=diary_db
-POSTGRES_USER=diary_user
-POSTGRES_PASSWORD=diary_password
+POSTGRES_DB=parser_db
+POSTGRES_USER=parser_user
+POSTGRES_PASSWORD=parser_password
 LOG_LEVEL=INFO
